security/policies/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPMustRunAsNonRoot
metadata:
  name: must-run-as-nonroot
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
